@@ -1,3 +1,8 @@
+2008-06-04  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* src/native_effects/PicmixEffect.cpp: fix configuration file
+	reading.
+
 2008-05-28  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* src/doc/linux_tips.dox: add some linux help.
